<resources>
    <string name="app_name">Eureca</string>
    <string name="entra">Go</string>
    <string name="textview">TextView</string>
    <string name="invia">Obtain informatioj</string>
    <string name="catturaqrcode">get QRCODE</string>
    <string name="actvity2">qRCodeActivity</string>
    <string name="avvia">Start</string>
    <string name="running">Wait</string>
    <string name="conser">getting web server</string>


    <!-- text field    -->
    <string name="nome">Name</string>
    <string name="descrizione">Description</string>
    <string name="data">Date</string>
    <string name="luogo">Location</string>

    <string name="partecipa">Partecipate</string>
    <string name="cognome">Surname</string>
    <string name="telefono">Phone number</string>
    <string name="email">Email</string>
    <string name="ente">Body</string>
    <string name="inviapartecipazione">Send Confirmation</string>
    <string name="todo">TODO</string>

    <string name="success">Subscription success</string>
    <string name="attendere">Wait</string>

    <string name="errore_generico">Something was going bad</string>
    <string name="errore_qrcode">No match</string>

    <string name="richiesta_permesso">Permission required</string>
    <string name="permesso_camera">Request Camera permission</string>
    <string name="permesso_ottenuto">Camerta permission granted</string>

</resources>
