<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/descrizioneTW"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:hint="@string/descrizione" />

            <TextView
                android:id="@+id/dataTW"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:hint="@string/data" />

            <TextView
                android:id="@+id/luogoTW"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:hint="@string/luogo" />

            <TextView
                android:id="@+id/nomeTW"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:hint="@string/nome" />

            <Button
                android:id="@+id/buttonPartecipa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="partecipa"
                android:text="@string/partecipa" />

            <LinearLayout
                android:id="@+id/linearInvisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/nomeTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nome"
                    android:inputType="text|textPersonName" />

                <EditText
                    android:id="@+id/cognomeTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cognome"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/emailTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/telefonoTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/dataNascitaTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/data"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/enteTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ente"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="inviaPartecipazione"
                    android:text="@string/inviapartecipazione" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>